--- a/meu_laboratorio/pubspec.yaml
+++ b/meu_laboratorio/pubspec.yaml
@@ -31,7 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
   sqflite: ^2.0.0+4
+  sqflite_common_ffi: ^2.3.5
   path_provider: ^2.0.11
+  path: ^1.8.3
   pdf: ^3.8.1
   flutter_login: ^2.0.0
   image_picker: ^0.8.7+4
@@ -56,7 +58,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
+  assets:
+    - assets/fonts/Roboto-Regular.ttf
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
