--- a/meu_laboratorio/pubspec.yaml
+++ b/meu_laboratorio/pubspec.yaml
@@ -59,7 +59,7 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
   assets:
-    - assets/fonts/Roboto-Regular.ttf
+    - assets/fonts/Roboto-VariableFont_wdth,wght.ttf
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
