--- a/meu_laboratorio/pubspec.yaml
+++ b/meu_laboratorio/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   pdf: ^3.8.1
   flutter_login: ^2.0.0
   image_picker: ^0.8.7+4
+  intl: ^0.20.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
