--- a/meu_laboratorio/pubspec.yaml
+++ b/meu_laboratorio/pubspec.yaml
@@ -36,8 +36,9 @@ dependencies:
   path: ^1.8.3
   pdf: ^3.8.1
   flutter_login: ^2.0.0
-  image_picker: ^0.8.7+4
+  image_picker: ^1.1.2
   intl: ^0.20.2
+  permission_handler: ^11.4.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
