--- a/meu_laboratorio/pubspec.yaml
+++ b/meu_laboratorio/pubspec.yaml
@@ -34,11 +34,14 @@ dependencies:
   sqflite_common_ffi: ^2.3.5
   path_provider: ^2.0.11
   path: ^1.8.3
-  pdf: ^3.8.1
+  pdf: ^3.10.7
   flutter_login: ^2.0.0
   image_picker: ^1.1.2
   intl: ^0.20.2
   permission_handler: ^11.4.0
+  open_file: ^3.0.3
+  share_plus: ^10.1.4
+  cross_file: ^0.3.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -61,7 +64,7 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
   assets:
-    - assets/fonts/Roboto-VariableFont_wdth,wght.ttf
+    - assets/fonts/arial.ttf
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
